# research-synthesis-engine

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
agent/: evidence_matrix.py  guidance_common.py  open_problems.py  query_rewriter.py  reading_path.py  research_graph.py  research_guidance.py  synthesis.py
api/: main.py
data/: .gitkeep
docs/: DAY3_SPOT_CHECK.md  DECISIONS.md  DEMO_SCRIPT.md  EVALUATION.md  research-synthesis-engine-build-plan.md
full_text/: chunk_papers.py  discover_sources.py  download_extract.py  embed_chunks.py  index_chunks_qdrant.py  recover_sources.py  select_sources.py
ingestion/: __init__.py  embed.py  extract.py  fetch_papers.py
retrieval/: build_bm25.py  confidence.py  evaluate.py  hybrid_search.py  index_qdrant.py  rerank.py  router.py  search_qdrant.py  unified_search.py
shared/: __init__.py  schemas.py
tests/: test_api.py  test_benchmark_latency.py  test_bm25.py  test_chunk_papers.py  test_confidence.py  test_discover_sources.py  test_download_extract.py  test_embed.py  test_embed_chunks.py  test_evaluate.py  test_evidence_matrix.py  test_extract.py  test_fetch_papers.py  test_hybrid_search.py  test_index_chunks_qdrant.py  test_index_qdrant.py  test_open_problems.py  test_query_rewriter.py  test_reading_path.py  test_recover_sources.py  test_rerank.py  test_research_graph.py  test_research_guidance.py  test_research_retrieval_tool.py  test_router.py  test_select_sources.py  test_synthesis.py  test_ui_helpers.py  test_unified_search.py
tools/: __init__.py  benchmark_latency.py  (+1 more)
(+4 files in other folders)
