[project]
name = "research-synthesis-engine"
version = "0.1.0"
description = "Agentic research synthesis engine for academic papers with hybrid retrieval and grounded outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "qdrant-client>=1.9.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "retrieval*", "full_text*", "agent*", "tools*", "api*", "ui*", "shared*"]

